chore: updated borked jan 15 stats

--- a/2026-weekly-work-summaries/2026-01-16.md
+++ b/2026-weekly-work-summaries/2026-01-16.md
@@ -8,9 +8,9 @@ Week-in-review video transcript
 
 ## Stats
 
-- PRs merged: 0 | Total PRs: 0 | Reviews: 0 | Comments: 0
-- Linear completed: 0 | Worked on: 0
-- Repos: apollos-admin
+- PRs merged: 22 | Total PRs: 81 | Reviews: 34 | Comments: 0
+- Linear completed: 20 | Worked on: 25
+- Repos: apollos-admin, apollos-cluster, apollos-platforms
 
 ## Linear — Completed
 
