chore: updated summaries

--- a/2026-weekly-work-summaries/2026-01-23.md
+++ b/2026-weekly-work-summaries/2026-01-23.md
@@ -8,7 +8,7 @@ Week-in-review video transcript
 
 ## Stats
 
-- PRs merged: 25 | Total PRs: 31 | Reviews: 21 | Comments: 0
+- PRs merged: 25 | Total PRs: 31 | Reviews: 21 | Comments: 0 | Commits: 25
 - Linear completed: 29 | Worked on: 33
 - Repos: apollos-admin
 
