--- a/2026-weekly-work-summaries/2026-01-30.md
+++ b/2026-weekly-work-summaries/2026-01-30.md
@@ -8,7 +8,7 @@ End-of-year review and career narrative. Document leadership, ownership, mentori
 
 ## Stats
 
-- PRs merged: 3 | Total PRs: 9 | Reviews: 18 | Comments: 44
+- PRs merged: 3 | Total PRs: 9 | Reviews: 18 | Comments: 44 | Commits: 3
 - Linear completed: 3 | Worked on: 7
 - Repos: apollos-cluster, apollos-admin
 
