chore: update repos chart

--- a/2026-weekly-work-summaries/2026-01-02.md
+++ b/2026-weekly-work-summaries/2026-01-02.md
@@ -10,7 +10,7 @@ Week-in-review video transcript
 
 - PRs merged: 0 | Total PRs: 0 | Reviews: 0 | Comments: 0 | Commits: 7
 - Linear completed: 0 | Worked on: 0
-- Repos: apollos-admin
+- Repos: apollos-admin, apollos-cluster
 
 ## Linear — Completed
 
